# odai

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ToDo.md  compile_commands.json  dev_nuances.md  main  nuances.md  odai_jni.cpp  setup_repo.sh  test_nuances.md
.agent/skills/odai_development_guide/: SKILL.md
.agent/skills/odai_documentation_guide/: SKILL.md
.agent/skills/odai_nuances_tracking/: SKILL.md
.agents/skills/odai_development_guide/: SKILL.md
.agents/skills/odai_documentation_guide/: SKILL.md
.agents/skills/odai_nuances_tracking/: SKILL.md
.agents/skills/odai_planning_guide/: SKILL.md
.agents/skills/odai_testing_guide/: SKILL.md
.agents/skills/planning_guidelines/: SKILL.md
.cursor/commands/: document.md
.githooks/: pre-commit
docs/architecture/: README.md  data-flow-and-type-system.md  testing.md
docs/architecture/implementations/: llamacpp-backend.md  miniaudio-decoder.md  sqlite-database.md  stb-image-decoder.md
docs/architecture/interfaces/: audio-decoder.md  backend-engine.md  database.md  image-decoder.md
docs/plans/: inference-benchmark-stats-plan.md  kv-cache-reuse-design-plan.md  testing-strategy-phase-3-backend-breakdown.md  testing-strategy-plan.md
guidelines/: development_guidelines.md  documentation_guideline.md
scripts/: format.sh  generate_test_data.py  lint.sh  pre-commit
src/impl/: odai_jni.cpp  odai_logger.cpp  odai_public.cpp  odai_sdk.cpp
src/impl/audioEngine/: odai_audio_decoder.cpp  odai_miniaudio_decoder.cpp
src/impl/backendEngine/: odai_llama_backend_engine.cpp
src/impl/backendEngine/odai_llamacpp/: odai_llama_backend_engine.cpp  odai_llama_type_conversions.cpp
src/impl/db/: odai_sqlite_db.cpp
src/impl/db/odai_sqlite/: odai_sqlite_db.cpp
src/impl/headerOnlyLib/: odai_miniaudio_impl.cpp  odai_stb_image_impl.cpp
src/impl/imageEngine/: odai_image_decoder.cpp  odai_stb_image_decoder.cpp
src/impl/ragEngine/: odai_rag_engine.cpp
src/impl/types/: odai_type_conversions.cpp
src/impl/utils/: odai_csanitizers.cpp  odai_helpers.cpp  string_utils.cpp
src/include/: odai_logger.h  odai_public.h  odai_sdk.h
src/include/audioEngine/: odai_audio_decoder.h  odai_miniaudio_decoder.h
src/include/backendEngine/: odai_backend_engine.h  odai_llama_backend_engine.h
src/include/backendEngine/odai_llamacpp/: odai_llama_backend_engine.h  odai_llama_type_conversions.h
src/include/db/: odai_db.h  odai_sqlite_db.h
src/include/db/odai_sqlite/: odai_sqlite_db.h
src/include/imageEngine/: odai_image_decoder.h  odai_stb_image_decoder.h
src/include/ragEngine/: odai_rag_engine.h
src/include/types/: odai_common_types.h  odai_ctypes.h  odai_export.h  odai_result.h  odai_type_conversions.h  odai_types.h
src/include/utils/: odai_csanitizers.h  odai_exception_macros.h  odai_helpers.h  string_utils.h
tests/: CMakeLists.txt  main.cpp  odai_decoder_test_helpers.h  odai_test_helpers.h  run_tests.sh
tests/audioEngine/: CMakeLists.txt  odai_audio_decoder_contract_test.cpp  odai_miniaudio_decoder_test.cpp
tests/db/: CMakeLists.txt  odai_db_contract_tests.h  odai_db_test_helpers.h  odai_sqlite_db_contract_test.cpp  odai_sqlite_db_test.cpp
tests/imageEngine/: CMakeLists.txt  odai_image_decoder_contract_test.cpp  odai_stb_image_decoder_test.cpp
